--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,10 +2,10 @@ find_package(Qt5 ${QT_MIN_VERSION} REQUIRED COMPONENTS Test)
 
 include_directories(
     ${KDEConnectCore_BINARY_DIR}
-    ${CMAKE_SOURCE_DIR}
-    ${CMAKE_BINARY_DIR}
-    ${CMAKE_BINARY_DIR}/plugins/sendnotifications/
-    ${CMAKE_BINARY_DIR}/smsapp/
+    ${CMAKE_CURRENT_LIST_DIR}
+    ${CMAKE_CURRENT_BINARY_DIR}/..
+    ${CMAKE_CURRENT_BINARY_DIR}/../plugins/sendnotifications/
+    ${CMAKE_CURRENT_BINARY_DIR}/../smsapp/
 )
 
 set(kdeconnect_libraries
