--- a/daemon/CMakeLists.txt
+++ b/daemon/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_definitions(-DTRANSLATION_DOMAIN="kdeconnect-kded")
 
 add_executable(kdeconnectd kdeconnectd.cpp)
-target_include_directories(kdeconnectd PUBLIC ${CMAKE_BINARY_DIR})
+target_include_directories(kdeconnectd PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/..)
 target_link_libraries(kdeconnectd kdeconnectcore KF5::KIOWidgets KF5::DBusAddons KF5::Notifications KF5::I18n Qt5::Widgets)
 
 ecm_mark_nongui_executable(kdeconnectd)
