--- a/interfaces/CMakeLists.txt
+++ b/interfaces/CMakeLists.txt
@@ -20,22 +20,22 @@ set(libkdeconnect_SRC
 #    modeltest.cpp
 )
 
-geninterface(${CMAKE_SOURCE_DIR}/core/daemon.h daemoninterface)
-geninterface(${CMAKE_SOURCE_DIR}/core/device.h deviceinterface)
-geninterface(${CMAKE_SOURCE_DIR}/plugins/battery/batterydbusinterface.h devicebatteryinterface)
-geninterface(${CMAKE_SOURCE_DIR}/plugins/sftp/sftpplugin.h devicesftpinterface)
-geninterface(${CMAKE_SOURCE_DIR}/plugins/notifications/notificationsdbusinterface.h devicenotificationsinterface)
-geninterface(${CMAKE_SOURCE_DIR}/plugins/findmyphone/findmyphoneplugin.h devicefindmyphoneinterface)
-geninterface(${CMAKE_SOURCE_DIR}/plugins/notifications/notification.h notificationinterface)
-geninterface(${CMAKE_SOURCE_DIR}/plugins/mprisremote/mprisremoteplugin.h mprisremoteinterface)
-geninterface(${CMAKE_SOURCE_DIR}/plugins/remotecontrol/remotecontrolplugin.h remotecontrolinterface)
-geninterface(${CMAKE_SOURCE_DIR}/plugins/lockdevice/lockdeviceplugin.h lockdeviceinterface)
-geninterface(${CMAKE_SOURCE_DIR}/plugins/remotecommands/remotecommandsplugin.h remotecommandsinterface)
-geninterface(${CMAKE_SOURCE_DIR}/plugins/remotekeyboard/remotekeyboardplugin.h remotekeyboardinterface)
-geninterface(${CMAKE_SOURCE_DIR}/plugins/sms/smsplugin.h smsinterface)
-geninterface(${CMAKE_SOURCE_DIR}/plugins/sms/conversationsdbusinterface.h conversationsinterface)
-geninterface(${CMAKE_SOURCE_DIR}/plugins/share/shareplugin.h shareinterface)
-geninterface(${CMAKE_SOURCE_DIR}/plugins/remotesystemvolume/remotesystemvolumeplugin.h remotesystemvolumeinterface)
+geninterface(${CMAKE_CURRENT_LIST_DIR}/../core/daemon.h daemoninterface)
+geninterface(${CMAKE_CURRENT_LIST_DIR}/../core/device.h deviceinterface)
+geninterface(${CMAKE_CURRENT_LIST_DIR}/../plugins/battery/batterydbusinterface.h devicebatteryinterface)
+geninterface(${CMAKE_CURRENT_LIST_DIR}/../plugins/sftp/sftpplugin.h devicesftpinterface)
+geninterface(${CMAKE_CURRENT_LIST_DIR}/../plugins/notifications/notificationsdbusinterface.h devicenotificationsinterface)
+geninterface(${CMAKE_CURRENT_LIST_DIR}/../plugins/findmyphone/findmyphoneplugin.h devicefindmyphoneinterface)
+geninterface(${CMAKE_CURRENT_LIST_DIR}/../plugins/notifications/notification.h notificationinterface)
+geninterface(${CMAKE_CURRENT_LIST_DIR}/../plugins/mprisremote/mprisremoteplugin.h mprisremoteinterface)
+geninterface(${CMAKE_CURRENT_LIST_DIR}/../plugins/remotecontrol/remotecontrolplugin.h remotecontrolinterface)
+geninterface(${CMAKE_CURRENT_LIST_DIR}/../plugins/lockdevice/lockdeviceplugin.h lockdeviceinterface)
+geninterface(${CMAKE_CURRENT_LIST_DIR}/../plugins/remotecommands/remotecommandsplugin.h remotecommandsinterface)
+geninterface(${CMAKE_CURRENT_LIST_DIR}/../plugins/remotekeyboard/remotekeyboardplugin.h remotekeyboardinterface)
+geninterface(${CMAKE_CURRENT_LIST_DIR}/../plugins/sms/smsplugin.h smsinterface)
+geninterface(${CMAKE_CURRENT_LIST_DIR}/../plugins/sms/conversationsdbusinterface.h conversationsinterface)
+geninterface(${CMAKE_CURRENT_LIST_DIR}/../plugins/share/shareplugin.h shareinterface)
+geninterface(${CMAKE_CURRENT_LIST_DIR}/../plugins/remotesystemvolume/remotesystemvolumeplugin.h remotesystemvolumeinterface)
 
 add_library(kdeconnectinterfaces SHARED ${libkdeconnect_SRC})
 set_target_properties(kdeconnectinterfaces PROPERTIES
