--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -1,4 +1,4 @@
-include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR}/core)
+include_directories(${CMAKE_CURRENT_LIST_DIR} ${CMAKE_BINARY_DIR}/core)
 add_definitions(-DTRANSLATION_DOMAIN=\"kdeconnect-plugins\")
 install(FILES kdeconnect_plugin.desktop DESTINATION ${SERVICETYPES_INSTALL_DIR})
 
