--- a/urlhandler/CMakeLists.txt
+++ b/urlhandler/CMakeLists.txt
@@ -2,7 +2,7 @@ ki18n_wrap_ui(telhandler_SRCS dialog.ui)
 
 add_executable(kdeconnect-handler kdeconnect-handler.cpp ${telhandler_SRCS})
 
-target_include_directories(kdeconnect-handler PUBLIC ${CMAKE_BINARY_DIR})
+target_include_directories(kdeconnect-handler PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/..)
 
 target_link_libraries(kdeconnect-handler
     kdeconnectinterfaces
